--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   pay: ^2.0.0
   url_launcher: ^6.2.5
   external_app_launcher: ^4.0.0
+  upi_india: ^3.0.1
 
 dev_dependencies:
   flutter_test:
